--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-clear-cache": "^1.0.26",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
     "react-typed": "^1.2.0",
