--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-react-new",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://www.revereit.net",
   "dependencies": {
     "animate.css": "^3.7.2",
     "bootstrap": "^4.5.3",
